# gaslite

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml  rustfmt.toml
rag/functions/: erc20_approve.json  erc20_balance_of.json  erc20_mint.json  erc20_transfer.json  erc20_transfer_from.json  erc20votes_checkpoint_latest.json
rag/patterns/: ADDRESS_SHIFT_PACKING.json  ADJACENCY_SLOT.json  ANTIPATTERN_HARDCODED_SLOT.json  ANTIPATTERN_LOG4_INDEXED_DATA_PAYLOAD.json  ANTIPATTERN_PANIC_SELECTOR.json  ANTIPATTERN_STATICCALL_STATE_CHANGE.json  ANTIPATTERN_WRONG_CUSTOM_ERROR_SELECTOR.json  ANTIPATTERN_WRONG_NESTED_MAPPING_SLOT.json  ANTIPATTERN_WRONG_REVERT_OFFSET.json  BATCH_ARRAY_SHIFT_ITERATION.json  BITWISE_XOR_EXTRACTION.json  BIT_EXTRACTION_PACKED_SLOT.json  BOOLEAN_NORMALIZE.json  BRANCHLESS_CLAMP.json  BRANCHLESS_MAX_LENGTH.json  BUBBLE_UP_REVERT.json  CACHED_CHAIN_ID_FORK_SAFETY.json  CALLDATACOPY_HASH.json  CALLDATALOAD_SHR_SELECTOR.json  CLEAN_UPPER_BITS.json  CODESIZE_LOG4.json  CONDITIONAL_FREE_POINTER_RESTORE.json  CREATE2_BACKWARD_INITCODE_LAYOUT.json  CUSTOM_ERROR_4BYTE.json  DELEGATECALL_BUBBLE_RETURNDATA.json  DUAL_ERROR_PACKED_REVERT.json  DYNAMIC_BYTECODE_GENERATION.json  ERROR_REGISTRY.json  EXTCODECOPY_IMMUTABLE_ARGS.json  EXTCODESIZE_SILENT_SUCCESS_PREVENTION.json  EXTERNAL_CALL_RETURN_BUBBLING.json  FALLBACK_SLOT_READ.json  FORCE_ETH_VIA_SELFDESTRUCT.json  GAS_BURN_RPC_DETECTION.json  IDENTITY_PRECOMPILE_MEMORY_COPY.json  INFINITE_ALLOWANCE_FAST_PATH.json  INVALID_ON_PRECOMPILE_FAILURE.json  LOG3_INLINE_EMIT.json  (+30 more)
src/: ai.rs  db.rs  embedding.rs  forge.rs  logging.rs  main.rs  normalize.rs  orchestrator.rs  retrieval.rs  rig_agent.rs  tools.rs  utils.rs  verify_agent.rs
webui/: .thumbnail  Gaslite Directions.html  Gaslite IDE v1 (table diff).html  Gaslite IDE.html  README.md  index.html  package.json  tsconfig.json
(+56 files in other folders)
