[package]
name = "gaslite"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
shuttle-axum = "0.57.0"
shuttle-runtime = "0.57.0"
shuttle-turso = "0.57.0"
tokio = "1.26.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
qdrant-client = "1.18.0"
reqwest = { version = "0.13.3", features = ["json"] }
tower-http = { version = "0.6.10", features = ["cors"] }
uuid = { version = "1.11", features = ["v4"] }
rand = "0.10.1"
rustls = { version = "0.23.40", features = ["ring"] }
tracing = { version = "0.1.44", features = ["log"] }
solang = "0.3.4"

