[package]
name = "gaslite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
qdrant-client = "1.18.0"
reqwest = { version = "0.13.3", features = ["json"] }
tower-http = { version = "0.6.10", features = ["cors"] }
uuid = { version = "1.11", features = ["v4"] }
rand = "0.10.1"
rustls = { version = "0.23.40", features = ["ring"] }
tracing = { version = "0.1.44", features = ["log"] }
solang-parser = "0.3.5"
fastembed = { version = "5.13.4", features = ["qwen3"] }
rig-core = "0.38"
rig-qdrant = "0.38"
thiserror = "2"

